<resources>
    <string name="app_name">ShoppingList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="list_of_item">Item List</string>
    <string name="add_item">Buy New Item</string>
    <string name="label_date">Date</string>
    <string name="label_name">Name</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_notes">Notes</string>
    <string name="account_details">Account Details</string>
    <string name="purchase_history">History</string>
</resources>