<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textStyle="bold"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/itemPurchaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_date"
                android:layout_weight="0.2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/itemQty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_quantity"
                android:textSize="12sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/itemNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_notes" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>