<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.AddItemFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_item"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001" />

            <LinearLayout
                android:id="@+id/formItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="50sp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textBanner"

                >

                <!--        <DatePicker-->
                <!--            android:id="@+id/date_picker_actions"-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"-->
                <!--            android:datePickerMode="spinner"-->
                <!--            android:calendarViewShown="false"-->
                <!--            android:layout_gravity="center_horizontal"-->
                <!--            />-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/inputItemDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_date"
                        app:hintTextColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <!--                <ImageButton-->
                    <!--                    android:id="@+id/date_picker_actions"-->
                    <!--                    android:layout_width="wrap_content"-->
                    <!--                    android:layout_height="wrap_content"-->
                    <!--                    android:src="@drawable/ic_baseline_date_range_24"-->
                    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
                    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                    <!--                    app:layout_constraintTop_toTopOf="parent" />-->
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/inputItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_name"
                        app:hintTextColor="@color/black" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/inputItemQty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_quantity"
                        android:inputType="numberDecimal"
                        app:hintTextColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/inputItemNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_notes"
                        app:hintTextColor="@color/black" />
                </LinearLayout>


                <Button
                    android:id="@+id/addItemButton"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_marginTop="30dp"
                    android:text="@string/add"
                    android:textSize="15sp" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</FrameLayout>